명연 상단바

--- a/inyro/Main.html
+++ b/inyro/Main.html
@@ -8,7 +8,7 @@
       @import url(menubar.css);
     </style>
     <header>
-      <h1 onclick="location.href='Main.html'">Inyro</h1>
+      <h1 onclick="location.href='Main.html'">INYRO</h1>
       <nav>
         <span onclick="location.href='yunjin2.html'">로그인</span>
         <span onclick="location.href='yunjin5.html'">회원가입</span>
@@ -18,7 +18,7 @@
   </head>
   <body>
     <br><br><br>
-    <nav>
+    <nav style="position:fixed;">
       <div class="topnav">
         <a class="active" href="#introduction">Introduction</a>
         <a href="#activity">Activity</a>
@@ -26,7 +26,7 @@
         <a href="#executive">Executive</a>
       </div>
     </nav>
-      <br>
+      <br><br>
       <section align="center" style="margin-bottom:100px">
           <img src="main1_1.png" width="80%">
       </section>
@@ -35,9 +35,9 @@
 		  <iframe id="main1" src="main1.html" width="1400" height="800" frameborder="0"></iframe>
 		</section>
 
-		<section id="activity" class="section2" style="margin-bottom:100px">
+		<section id="activity" class="section2">
 			<div align="center">
-					<iframe id="main2" src="main2.html" width="1400" height="800" frameborder="0"></iframe>
+					<iframe id="main2" src="main2.html" width="1400" height="880" frameborder="0"></iframe>
           <!-- <input type="button" id="more" style="font-size:15px;" value="더보기" onclick="location.href='gallery.html'"> -->
 			</div>
 		</section>
