--- a/inyro/yejin13.html
+++ b/inyro/yejin13.html
@@ -8,6 +8,7 @@
 <h2>글 작성하기</h2><br>
 <form align='middle'>
   <pre>
+      <input rows="70" type="text" placeholder="제목을 입력하세요.">
       <select name="option">
         <option value="1" selected>자유</option>
         <option value="2">과제</option>
