--- a/inyro/main4.html
+++ b/inyro/main4.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <style media="screen">
+      @import url(background.css);
+    </style>
   </head>
   <body>
     <nav>
       <h1 align="center" style="font-size:40px; font-weight: bold;">INYRO EXECUTIVE</h1>
     </nav>
-<section style="margin-top:50px; text-align:center;" >
+<section style="margin-top:20px; text-align:center;" >
   <img src="main4.png" width="1000px" height="500px">
 </section>
   </body>
