--- a/inyro/myongyeon13.html
+++ b/inyro/myongyeon13.html
@@ -5,6 +5,8 @@
   <style>
     @import url(bar.css);
     @import url(writeform.css);
+    @import url(background.css);
+    
   </style>
 </head>
 <body>
