--- a/inyro/myongyeon8_modify.html
+++ b/inyro/myongyeon8_modify.html
@@ -5,6 +5,7 @@
     <title>비밀번호 확인</title>
     <style media="screen">
       @import url(inyrobar.css);
+      @import url(background.css);
       /* .container{
         position: relative;
         width:100%;
