--- a/inyro/myongyeon9.html
+++ b/inyro/myongyeon9.html
@@ -5,6 +5,8 @@
   <title>개인정보수정</title>
   <style media="screen">
     @import url(inyrobar.css);
+    @import url(background.css);
+    
     /* .container{
       position: relative;
       width:100%;
