--- a/inyro/yejin12.html
+++ b/inyro/yejin12.html
@@ -15,7 +15,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
   </head>
   <body>
 <header>
-  <h1 onclick="location.href='Main.html'">Inyro</h1>
+  <h1 onclick="location.href='Main.html'">INYRO</h1>
   <nav>
     <span onclick="location.href='yunjin2.html'">로그인</span>
     <span onclick="location.href='yunjin5.html'">회원가입</span>
@@ -30,7 +30,6 @@ document.addEventListener("DOMContentLoaded", function(event) {
   <button class="tablinks" onclick="openCity(event, 'introduction'); C();" style="text-align:center; font-weight:bold; font-size:20px;">Q&A</button>
   <button class="tablinks" onclick="openCity(event, 'introduction'); D();" style="text-align:center; font-weight:bold; font-size:20px;">갤러리</button>
 </div>
-
 
 <!-- Tab content -->
   <div id="introduction" class="tabcontent">
