--- a/inyro/yunjin4.html
+++ b/inyro/yunjin4.html
@@ -8,12 +8,12 @@
 
   #item{
     align-items: center;
-    width: 32%;
+    width: 33%;
     text-align: left;
   }
 </style>
 <header>
-  <h1 onclick="location.href='Main.html'">Inyro</h1>
+  <h1 onclick="location.href='Main.html'">INYRO</h1>
   <nav>
     <span onclick="location.href='yunjin2.html'">로그인</span>
     <span onclick="location.href='yunjin5.html'">회원가입</span>
