--- a/inyro/yejin12.html
+++ b/inyro/yejin12.html
@@ -5,6 +5,7 @@
 <style>
   @import url(inyrobar.css);
   @import url(menubarpost.css);
+  @import url(background.css);
 </style>
 <script src="menubarpost.js"></script>
 <script>
