--- a/inyro/yejinframe4.html
+++ b/inyro/yejinframe4.html
@@ -7,7 +7,7 @@
 <table>
   <tbody>
     <tr>
-      <td><img src="gallery1.PNG"></td><td><img src="gallery2.PNG"></td><td><img src="gallery3.PNG"></td><td><img src="gallery5.PNG"></td><td><img src="gallery4.PNG"></td><td><img src="gallery6.PNG"></td>
+      <td><img style="height:300px" src="gallery1.PNG"></td><td><img style="height:300px" src="gallery2.PNG"></td><td><img style="height:300px" src="gallery3.PNG"></td><td><img style="height:300px" src="gallery5.PNG"></td><td><img style="height:300px" src="gallery4.PNG"></td><td><img style="height:300px" src="gallery6.PNG"></td>
     </tr>
   </tbody>
 </table>
