--- a/inyro/main2.html
+++ b/inyro/main2.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <style media="screen">
       @import url(yunjinbar.css);
+      @import url(background.css);
     </style>
 
     <title>main2</title>
