--- a/inyro/main3.html
+++ b/inyro/main3.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <style media="screen">
       @import url(yunjinbar.css);
+      @import url(background.css);
     </style>
 
     <title>main3</title>
@@ -14,9 +15,9 @@
       <h1 align='center' style="font-size:40px; font-weight: bold">INYRO ABOUT</h1>
     </nav>
   <div align='center'>
-    <iframe id="frame" src="main3_1.html" width="830" height="610" frameborder="0"></iframe>
+    <iframe id="frame" src="main3_1.html" width="830" height="490" frameborder="0"></iframe>
   </div>
-    <div id="menuX" align='center'>
+    <div id="menuX" align='center' margin-top='0'>
   <ul id="menu-list"/>
       <li> <a id="li1" onclick="change1()">활동소개</a></li>
       <li> <a>|</a></li>
