--- a/inyro/main3_1.html
+++ b/inyro/main3_1.html
@@ -20,7 +20,7 @@
    </ul>
    <div id="menu-line"></div>
    <div class="container" align='center'>
-    <img id="img" width="710px" height="460px" align='top' src="inside.png" />
+    <img id="img" width="710px" height="400px" align='top' src="inside.png" margin='0'/>
     <!-- <input type='button' id='more' style="font-size:15px;" value='더보기' onclick="parent.location.href='activityintro1.html'"/> -->
 
   </div>
