--- a/inyro/yunjin2.html
+++ b/inyro/yunjin2.html
@@ -6,6 +6,7 @@
 <style>
   @import url(inyrobar.css);
   @import url(menubar.css);
+  @import url(background.css);
 
   #item{
     align-items: center;
