--- a/inyro/Main.html
+++ b/inyro/Main.html
@@ -39,13 +39,13 @@
 
 		<section id="activity" class="section2">
 			<div align="center">
-					<iframe id="main2" src="main2.html" width="1400" height="880" frameborder="0"></iframe>
+					<iframe id="main2" src="main2.html" width="1400" height="910" frameborder="0"></iframe>
           <!-- <input type="button" id="more" style="font-size:15px;" value="더보기" onclick="location.href='gallery.html'"> -->
 			</div>
 		</section>
 		<section id="about" class="section3" style="margin-bottom:100px">
 			<div align="center">
-					<iframe id="main3" src="main3.html" width="1400" height="800" frameborder="0"></iframe>
+					<iframe id="main3" src="main3.html" width="1400" height="880" frameborder="0"></iframe>
 			</div>
 		</section>
 		<section id="executive" class="section4" style="margin-bottom:50px">
@@ -55,10 +55,10 @@
 		</section>
     <footer id="infor">
       <hr color="skyBlue" size="3">
-      <div style="margin-bottom:10px">
-        <p style="margin-bottom:5px">주소: 상명대학교 서울캠퍼스 (03016) 서울시 종로구 홍지문 2길 10 상명대학교 문화예술관 U311호</p>
-        <p style="margin-bottom:5px">홈페이지 문의: auddus16@naver.com</p>
-        <p style="margin-bottom:5px"><b>개발자: 김윤진 박예진 황명연</b></p>
+      <div style="margin:10px;">
+        <p style="margin:0;">주소: 상명대학교 서울캠퍼스 (03016) 서울시 종로구 홍지문 2길 10 상명대학교 문화예술관 U311호</p>
+        <p style="margin:0;">홈페이지 문의: auddus16@naver.com</p>
+        <p style="margin:0;"><b>개발자: 김윤진 박예진 황명연</b></p>
         <p align="center">Copyright © 2020. 상금나한테조. All rights reserved</p>
       </div>
     </footer>
