--- a/inyro/myongyeon13.html
+++ b/inyro/myongyeon13.html
@@ -6,12 +6,12 @@
     @import url(bar.css);
     @import url(writeform.css);
     @import url(background.css);
-    
+
   </style>
 </head>
 <body>
   <header>
-    <h1 onclick="location.href='Main.html'">Inyro</h1>
+    <h1 onclick="location.href='Main.html'">INYRO</h1>
       <nav>
         <span onclick="location.href='yunjin2.html'">로그인</span>
         <span onclick="location.href='yunjin5.html'">회원가입</span>
