--- a/inyro/myongyeon9.html
+++ b/inyro/myongyeon9.html
@@ -6,7 +6,7 @@
   <style media="screen">
     @import url(inyrobar.css);
     @import url(background.css);
-    
+
     /* .container{
       position: relative;
       width:100%;
@@ -18,7 +18,7 @@
     }
   </style>
   <header>
-    <h1 onclick="location.href='Main.html'">Inyro</h1>
+    <h1 onclick="location.href='Main.html'">INYRO</h1>
     <nav>
       <span onclick="location.href='yunjin2.html'">로그인</span>
       <span onclick="location.href='yunjin5.html'">회원가입</span>
