--- a/inyro/main1.html
+++ b/inyro/main1.html
@@ -11,7 +11,7 @@
     <nav>
       <h1 align="center" style="font-size:40px; font-weight: bold;">INYRO INTRODUCTION</h1>
     </nav>
-<section style="margin-top:20px;" align="center">
+<section style="margin-left:25px" align="center">
   <!-- <img src="main1_1.png" width="680px" height="500px" style="float:left;"> -->
 
   <img src="main1_2.png" width="1000px" height="600px">
