--- a/inyro/Main.html
+++ b/inyro/Main.html
@@ -26,14 +26,15 @@
         <a class="tablinks" onclick="openCity(event, 'introduction'); location.href='#activity';">Activity</a>
         <a class="tablinks" onclick="openCity(event, 'introduction'); location.href='#about';">About</a>
         <a class="tablinks" onclick="openCity(event, 'introduction'); location.href='#executive';">Executive</a>
+        <a class="tablinks" onclick="openCity(event, 'introduction'); location.href='yejin12.html';">Post</a>
       </div>
     </nav>
       <br><br><br>
       <section align="center" style="margin-bottom:100px">
-          <img src="main1_1.png" width="80%">
+          <img src="main1_1.png" width="1300" height="700">
       </section>
 
-		<section id="introduction" class="section1" align="center" style="margin-bottom:100px">
+		<section id="introduction" class="section1" align="center">
 		  <iframe id="main1" src="main1.html" width="1400" height="800" frameborder="0"></iframe>
 		</section>
 
@@ -45,7 +46,7 @@
 		</section>
 		<section id="about" class="section3" style="margin-bottom:100px">
 			<div align="center">
-					<iframe id="main3" src="main3.html" width="1400" height="880" frameborder="0"></iframe>
+					<iframe id="main3" src="main3.html" width="1400" height="700" frameborder="0"></iframe>
 			</div>
 		</section>
 		<section id="executive" class="section4" style="margin-bottom:50px">
@@ -54,7 +55,7 @@
 			</div>
 		</section>
     <footer id="infor">
-      <hr color="skyBlue" size="3">
+      <hr color="skyBlue" size="2">
       <div style="margin:10px;">
         <p style="margin:0;">주소: 상명대학교 서울캠퍼스 (03016) 서울시 종로구 홍지문 2길 10 상명대학교 문화예술관 U311호</p>
         <p style="margin:0;">홈페이지 문의: auddus16@naver.com</p>
