--- a/inyro/yejin13.html
+++ b/inyro/yejin13.html
@@ -2,6 +2,9 @@
 <html>
   <head>
 <meta charset="utf-8">
+<style>
+@import url(background.css);
+</style>
 
   </head>
   <body align="center">
@@ -15,11 +18,10 @@
         <option text-align:center; value="3">QNA</option>
         <option text-align:center; value="4">갤러리</option>
       </select>
-      <br>
-      <input style="position:absolute; top:172px; left:600px;  height:35px;" type="file" name="FileName">
 
+      <input style="position:absolute; top:172px; left:600px;   border:1px solid black;" type="file" name="FileName">
       <textarea  cols="68" rows="18" placeholder="내용을 입력하세요."></textarea> <br>
-      <button onclick="parent.location.href='yejin12.html'" style="width:100px; height:30px; margin-right:10px">등록하기</button>
+      <button class="yjbtn" onclick="parent.location.href='yejin12.html'" style="width:100px; height:30px; margin-right:10px">등록하기</button>
   </pre>
   </body>
 </html>
