--- a/inyro/yejin17.html
+++ b/inyro/yejin17.html
@@ -2,6 +2,9 @@
 <html>
   <head>
 <meta charset="utf-8">
+<style>
+@import url(background.css);
+</style>
   </head>
   <body align="center">
     <h2>갤러리 게시판</h2>
