--- a/inyro/yejin15.html
+++ b/inyro/yejin15.html
@@ -2,10 +2,13 @@
 <html>
   <head>
 <meta charset="utf-8">
+<style>
+@import url(background.css);
+</style>
   </head>
   <body align="center">
     <h2>과제 게시판</h2>
-    <button style="width:100px; height:30px; margin-right:10px; position:absolute;top:90px; left:360px;" onclick="location.href='yejin13.html'">작성하기</button>
+    <button class="yjbtn" style="width:100px; height:30px; margin-right:10px; position:absolute;top:90px; left:360px;" onclick="location.href='yejin13.html'">작성하기</button>
     <iframe style="position:absolute;top:120px; left:350px;" src="yejinframe2.html" width=50% height=400px frameborder="0"></iframe>
     <form style="position:absolute;top:90px; left:650px;">
       <select name="select" style="height:30px;">
