--- a/inyro/yejin13.html
+++ b/inyro/yejin13.html
@@ -19,7 +19,7 @@
         <option text-align:center; value="4">갤러리</option>
       </select>
 
-      <input style="position:absolute; top:172px; left:600px;   border:1px solid black;" type="file" name="FileName">
+      <input  class="yjbt" style="position:absolute; top:172px; left:600px;   border:1px solid black;" type="file" name="FileName">
       <textarea  cols="75" rows="15" placeholder="내용을 입력하세요."></textarea> <br>
       <button class="yjbtn" onclick="parent.location.href='yejin12.html'" style="width:100px; height:30px; margin-right:10px">등록하기</button>
   </pre>
