--- a/inyro/myongyeon7.html
+++ b/inyro/myongyeon7.html
@@ -54,8 +54,8 @@
                   <label for="checkcode"><b> 확인코드</b></label><br>
                   <input type="text" id="checkcode" name="checkcode" value="CS0020"style="width:500px; height:35px; margin-bottom:15px;" disabled><br>
                   <div class="btInfor"align="center">
-                  <input type="button" name="modify" value="수정" onclick="location.href='myongyeon8_modify.html'" style="width:100px; height:30px; margin-right:10px">
-                  <input type="button" name="withdraw" value="탈퇴" onclick="location.href='myongyeon8_withdraw.html'" style="width:100px; height:30px; margin-left:10px">
+                  <input class="mybt" type="button" name="modify" value="수정" onclick="location.href='myongyeon8_modify.html'" style="width:100px; height:30px; margin-right:10px">
+                  <input class="mybt" type="button" name="withdraw" value="탈퇴" onclick="location.href='myongyeon8_withdraw.html'" style="width:100px; height:30px; margin-left:10px">
                 </div>
               </div>
           </form>
