--- a/inyro/myongyeon8_modify.html
+++ b/inyro/myongyeon8_modify.html
@@ -28,7 +28,7 @@
   <body>
     <div class="container" align="center">
       <div class="checkpwd">
-      <form action="myongyeon9.html">
+      <form>
         <br><br><br><br>
         <h2 style="margin-top:20px; margin-bottom:20px">비밀번호 확인</h2>
         <!-- <label for="usrname">Username</label>
@@ -36,7 +36,7 @@
         <label for="psw"><b> Password</b></label>
         <input type="password" id="psw" name="psw" style="width:500px; height:35px; margin-bottom:15px;">
         <div class="btpwd" align="center">
-            <input type="submit" value="확인" style="width:100px; height:35px;">
+            <input class="mybt" type="button" value="확인" style="width:100px; height:35px;" onclick="location.href='myongyeon9.html'">
         </div>
       </form>
       </div>
