--- a/inyro/myongyeon8_withdraw.html
+++ b/inyro/myongyeon8_withdraw.html
@@ -37,7 +37,7 @@
         <label for="psw"><b> Password</b></label>
         <input type="password" id="psw" name="psw" style="width:500px; height:35px; margin-bottom:15px;">
         <div class="btpwd" align="center">
-            <input type="button" value="확인" onclick="goto();"style="width:100px; height:35px;">
+            <input class="mybt" type="button" value="확인" onclick="goto();"style="width:100px; height:35px;">
         </div>
       </form>
       </div>
