--- a/inyro/myongyeon9.html
+++ b/inyro/myongyeon9.html
@@ -69,7 +69,7 @@
                   <label for="checkcode"><b> 확인코드</b></label><br>
                   <input type="text" id="checkcode" name="checkcode" value="CS0020"style="width:500px; height:35px; margin-bottom:15px;"><br>
                   <div class="btInfor"align="center">
-                  <input type="button" name="modify" value="수정 완료" onclick="location.href='myongyeon7.html'" style="width:100px; height:30px; margin-right:10px">
+                  <input class="mybt" type="button" name="modify" value="수정 완료" onclick="location.href='myongyeon7.html'" style="width:100px; height:30px; margin-right:10px">
                 </div>
               </div>
           </form>
