윤진 마지막

--- a/inyro/main2.html
+++ b/inyro/main2.html
@@ -83,7 +83,7 @@ ul li a:after{
      </div>
     <!-- <input type='textarea' id='text' cols='2' rows='2' wrap='hard' style="width:350px;height:450px;font-size:25px;border:none;" value='주기적으로 화면이 깜빡이면서 눈 깜빡임을 유도하는 앱'/> -->
     <div id="text" float='left' style="display:inline-block;text-align:center;width:400px;height:450px;font-size:25px;">
-      주기적으로 화면이 깜빡이면서<br>눈 깜빡임을 유도하는 앱
+      주기적으로 화면이 깜빡이면서<br>눈 깜빡임을 유도하는 앱이다.
     </div>
 
     <!-- <p id="text" style="width:350px;height:450px;font-size:25px;">주기적으로 화면이 깜빡이면서 눈 깜빡임을 유도하는 앱</p> -->
@@ -92,19 +92,19 @@ ul li a:after{
   <script>
     function change1() {
       document.getElementById("img").src = "myeyes.png";
-      document.getElementById("text").innerHTML = '주기적으로 화면이 깜빡이면서<br>눈 깜빡임을 유도하는 앱';
+      document.getElementById("text").innerHTML = '주기적으로 화면이 깜빡이면서<br>눈 깜빡임을 유도하는 앱이다.';
     }
     function change2() {
       document.getElementById("img").src = "golla.png";
-      document.getElementById("text").innerHTML = '간단한 테스트를 통해 각자의 성향에 맞는 취미를 추천해주는 앱';
+      document.getElementById("text").innerHTML = '간단한 테스트를 통해<br>여러가지 분야의 취미 중에서<br>각자의 성향에 맞는<br>취미를 추천해준다.';
     }
     function change3() {
       document.getElementById("img").src = "ddubuck.png";
-      document.getElementById("text").innerHTML = '서울 탐방 코스를 추천해주는 앱';
+      document.getElementById("text").innerHTML = '서울 탐방 코스를 추천해주며<br>자신만의 코스도 만들 수 있는<br>서울 탐방에 꼭 필요한 앱!';
     }
     function change4() {
       document.getElementById("img").src = "inyrogram.png";
-      document.getElementById("text").innerHTML = '인☆';
+      document.getElementById("text").innerHTML = '기존에 있는<br>인스타그램의 카피앱으로<br>인스타그램의 기본적인 기능들을<br>이니로그램에서도 사용할 수 있다.';
     }
   </script>
 </div>
