--- a/inyro/main3_2.html
+++ b/inyro/main3_2.html
@@ -17,7 +17,7 @@
         <li> <a>|</a></li>
     	  <li> <a id="li2" onclick="change2()">과제 관련</a></li>
         <li> <a>|</a></li>
-    	  <li> <a id="li3" onclick="change3()">QnA</a></li>
+    	  <li> <a id="li3" onclick="change3()">Q&A</a></li>
         <li> <a>|</a></li>
     	  <li> <a id="li4" onclick="change4()">갤러리</a></li>
      </ul>
