--- a/inyro/Main.html
+++ b/inyro/Main.html
@@ -12,9 +12,9 @@
     <header>
       <h1 onclick="location.href='Main.html'">INYRO</h1>
       <nav>
-        <span onclick="location.href='yunjin2.html'">로그인</span>
-        <span onclick="location.href='yunjin5.html'">회원가입</span>
-        <span onclick="location.href='myongyeon7.html'">프로필</span>
+        <span onclick="location.href='yj_login.php'">로그인</span>
+        <span onclick="location.href='yj_register.php'">회원가입</span>
+        <span onclick="location.href='my_profile.php'">프로필</span>
       </nav>
     </header>
   </head>
