--- a/inyro/yj_findid.html
+++ b/inyro/yj_findid.html
@@ -16,9 +16,9 @@
 <header>
   <h1 onclick="location.href='Main.html'">INYRO</h1>
   <nav>
-    <span onclick="location.href='yunjin2.html'">로그인</span>
-    <span onclick="location.href='yunjin5.html'">회원가입</span>
-    <span onclick="location.href='myongyeon7.html'">프로필</span>
+    <span onclick="location.href='yj_login.php'">로그인</span>
+    <span onclick="location.href='yj_register.php'">회원가입</span>
+    <span onclick="location.href='my_profile.php'">프로필</span>
   </nav>
 </header>
   </head>
@@ -38,17 +38,6 @@
     <br>
     <input type="text" placeholder="이메일주소"  name="mb_email" style="width:500px; height:35px; margin-bottom:15px;">
 
-    <!-- <button type="submit" style="width:100px; height:30px; margin-bottom:10px;">인증번호받기</button>
-    <br><br>
-
-    <label for="certification"><b></b></label>
-    <input type="text" placeholder="인증번호입력" name="certification" style="width:500px; height:35px; margin-bottom:15px;" required>
-
-    <button type="submit" style="width:100px; height:30px; margin-bottom:10px;">Enter</button>
-    <br>
-    <hr>
-    <p>아이디는 ****** 입니다.</p>
-    <br> -->
   </div>
     <button type="submit" name="findid" style="width:100px; height:30px; margin-bottom:10px;">아이디 찾기</button>
   </form>
