게시판버튼

--- a/inyro/yj_findid.html
+++ b/inyro/yj_findid.html
@@ -39,7 +39,7 @@
     <input type="text" placeholder="이메일주소"  name="mb_email" style="width:500px; height:35px; margin-bottom:15px;">
 
   </div>
-    <button type="submit" name="findid" style="width:100px; height:30px; margin-bottom:10px;">아이디 찾기</button>
+    <button type="submit" name="findid" style="width:100px; height:30px; margin-bottom:10px;">확인</button>
   </form>
 </div>
     <!-- <h2 style="margin-top:40px; margin-bottom:20px">아이디 찾기</h2>
