--- a/inyro/yj_pwupdate.html
+++ b/inyro/yj_pwupdate.html
@@ -27,31 +27,8 @@
 
 <div class="container" align='center'>
   <form method="post" action="yj_findpw.php">
-  <div id="item">
-    <h2 style="margin-top:40px; margin-bottom:20px">비밀번호 찾기</h2>
-    <label for="id"><b>아이디</b></label>
-    <br>
-    <input type="text" placeholder="아이디" name="id" style="width:500px; height:35px; margin-bottom:15px;">
-    <br>
 
-    <label for="email"><b>이메일주소</b></label>
-    <br>
-    <input type="text" placeholder="이메일주소" name="email" style="width:500px; height:35px; margin-bottom:15px;">
-
-    </div>
-  </form>
-    <button type="submit" name="findpw" style="width:100px; height:30px; margin-bottom:10px;">확인</button>
-
-    <!-- <button type="submit" style="width:100px; height:30px; margin-bottom:10px;">인증번호받기</button>
-    <br><br>
-
-    <label for="certification"><b></b></label>
-    <input type="text" placeholder="인증번호입력" name="certification" style="width:500px; height:35px; margin-bottom:15px;">
-
-    <button type="submit"style="width:100px; height:30px; margin-bottom:10px;" >Enter</button> -->
-    <br>
-
-    <!-- <div id="item">
+    <div id="item">
       <hr>
     <h2>새로운 비밀번호 설정하기</h2>
 
@@ -68,9 +45,10 @@
     <br><br> -->
 
   </div>
-</div> -->
+  </form>
+  </div>
 
-    <!-- <button type="submit" style="width:100px; height:30px; margin-bottom:10px;" onclick="location.href='yunjin2.html'">로그인하기</button> -->
+    <button type="submit" style="width:100px; height:30px; margin-bottom:10px;" onclick="location.href='yunjin2.html'">로그인하기</button>
 
   </body>
 </html>
