--- a/inyro/main3_2.html
+++ b/inyro/main3_2.html
@@ -24,12 +24,12 @@
      <div id="menu-line"  align='center'></div>
      <div class="container" align='center'>
       <!-- <img id="img" width="430px" height="430px" src="sangmyung.jpg" /> -->
-      <iframe id="frame" src="yejinframe1.html" width="650px" height="350px" frameborder="0"></iframe>
+      <iframe id="frame" src="./yejinframe1.php" width="650px" height="350px" frameborder="0"></iframe>
 
     </div>
     </div>
     <br>
-    <input type='button' id='more' style="font-size:15px;float:right;" value='게시판 더보기' onclick="parent.parent.location.href='yejin12.html'"/>
+    <input type='button' id='more' style="font-size:15px;float:right;" value='게시판 더보기' onclick="parent.parent.location.href='yejin12.php'"/>
   </div>
     <!-- <div id="menuX" align='center'>
   <ul id="menu-list">
@@ -47,16 +47,16 @@
   <!-- <input type='button' id='more' style="font-size:15px;" value='게시판 더보기'/> -->
   <script>
     function change1() {
-      document.getElementById("frame").src = "yejinframe1.html";
+      document.getElementById("frame").src = "./yejinframe1.php";
     }
     function change2() {
-      document.getElementById("frame").src = "yejinframe2.html";
+      document.getElementById("frame").src = "./yejinframe2.php";
     }
     function change3() {
-      document.getElementById("frame").src = "yejinframe3.html";
+      document.getElementById("frame").src = "./yejinframe3.php";
     }
     function change4() {
-      document.getElementById("frame").src = "yejinframe4.html";
+      document.getElementById("frame").src = "./yejinframe4.php";
     }
   </script>
 </div>
